<resources>
    <string name="app_name">Single Screen App</string>
    <string name="title">USF Muay Thai Club</string>
    <string name="coach">Coach: Avi Singh</string>
    <string name="hours">Hours: 8:30pm - 9:45pm (Tuesday, Wednesday, Thursday)</string>
    <string name="location">Location: Koret Boxing Room</string>
    <string name="email">muaythaiclub@usfca.edu</string>
    <string name="club_description">The USF Muay Thai Club is a recreational club on campus where
        PEOPLE OF ALL LEVELS OF EXPERIENCE ARE WELCOME. Muay Thai is the national sport of
        Thailand and is referred to as the \"Art of Eight Limbs\" or the \"Science of Eight Limbs\",
        because it makes use of punches, kicks, elbows and knee strikes, thus using eight points
        of contact. A practitioner of Muay Thai is known as a nak muay. Muay Thai can be seen in
        MMA (mixed martial arts) since many mixed martial artists are trained in Muay Thai. </string>
    <string name="content_description_null">@null</string>
</resources>
